--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.4.0",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.9.15",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "stripe": "^17.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
